--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<body>
-
-  <title>PolarBear</title>
+<title>PolarBear</title>
+  
 <h1> BAR  </h1>
 <h2> Angier Lei </h2>
-<h3> Bina Jeong </h3>
+  <br> Bina Jeong 
 <! -- Teamname, my name and partners name respectively  -->
+</html>
