--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html>
 <title>PolarBear</title>
   
+<! --  Angier Lei
+IntroCS pd7 sec11
+HW2 -- Publishio, create and work on github repository
+2021-2-8  -->
 <h1> BAR  </h1>
 <h2> Angier Lei </h2>
   <br> Bina Jeong 
-<! -- Teamname, my name and partners name respectively  -->
+  <br> Rania Zaki
 </html>
