--- a/index.html
+++ b/index.html
@@ -25,6 +25,6 @@ HW3 -- Thank you for coming to my Ted talk, create a webpage showcasing somethin
   <p>  I haven't even discussed professional Doubles which includes, men's doubles, women's doubles and mixed doubles. To learn more about the men's professional tour click <a href="https://www.atptour.com/">here</a> and for women's click <a href="https://www.wtatennis.com/">here</a>. </p>
   <h2> Teammate Showcase </h2>
   <ul> 
-    <li <a href="https://binajeong.github.io/web/">Bina Jeong </a> </li>
-<li <a href="https://raniazaki.github.io/web/">Rania Zaki </a> </li> </ul>
+    <li> <a href="https://binajeong.github.io/web/">Bina Jeong </a> </li>
+<li> <a href="https://raniazaki.github.io/web/">Rania Zaki </a> </li> </ul>
 </html>
