--- a/talk.html
+++ b/talk.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html>
+    <head>
+    
 
-  
+  <link href="main.css" rel="stylesheet">
+    </head>
 <! --  Angier Lei
 IntroCS pd7 sec11
-HW3 -- Thank you for coming to my Ted talk, create a webpage showcasing something that I am interested in (tennis)
+HW5 -- Stuylin, Adding Css
 2021-2-10  -->
+<body>  
 <h1> A Brief Introduction to Tennis    </h1>
   <ul>
     <li> A Brief Introduction </li>
@@ -25,6 +29,7 @@ HW3 -- Thank you for coming to my Ted talk, create a webpage showcasing somethin
   <p>  I haven't even discussed professional Doubles which includes, men's doubles, women's doubles and mixed doubles. To learn more about the men's professional tour click <a href="https://www.atptour.com/">here</a> and for women's click <a href="https://www.wtatennis.com/">here</a>. </p>
   <h2> Teammate Showcase </h2>
   <ul> 
-    <li> <a href="https://binajeong.github.io/web/">Bina Jeong</a> </li>
-<li> <a href="https://raniazaki.github.io/web/">Rania Zaki </a> </li> </ul>
+    <li> <a href="https://roynisson.github.io/web/talk">Roy Nisson</a> </li>
+<li> <a href="https://aahanmehta.github.io/web/talk">Aahan Mehta </a> </li> </ul>
+    </body>
 </html>
